@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-03T16:18:15Z",
-  "count_outdated" : 312,
-  "uniques_outdated" : 163,
-  "count" : 327,
-  "uniques" : 174,
+  "timestamp" : "2022-06-04T00:55:28Z",
+  "count_outdated" : 326,
+  "uniques_outdated" : 173,
+  "count" : 341,
+  "uniques" : 183,
   "clones" : [
-    {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 14 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 10 ]
-    },
     {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
