@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-21T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -39,7 +34,7 @@
     },
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
